Updated to the latest LagFixer version. Full changelog: https://modrinth.com/plugin/lagfixer