@@ -1,138 +1,178 @@
 package xyz.lychee.lagfixer.modules;
 
-import com.google.common.collect.Iterators;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.core.Filter;
 import org.apache.logging.log4j.core.LogEvent;
 import org.apache.logging.log4j.core.Logger;
-import org.apache.logging.log4j.core.LoggerContext;
-import org.apache.logging.log4j.core.config.LoggerConfig;
 import org.apache.logging.log4j.core.filter.AbstractFilter;
 import xyz.lychee.lagfixer.LagFixer;
 import xyz.lychee.lagfixer.managers.ModuleManager;
 import xyz.lychee.lagfixer.objects.AbstractModule;
-import xyz.lychee.lagfixer.utils.ZipUtils;
 
 import java.io.*;
-import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 import java.text.SimpleDateFormat;
-import java.util.*;
-import java.util.regex.Matcher;
+import java.util.Comparator;
+import java.util.Date;
+import java.util.Iterator;
+import java.util.List;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import java.util.zip.GZIPInputStream;
 
-public class ConsoleFilterModule
-        extends AbstractModule {
-    private File logs;
-    private FileWriter filewriter;
-    private BufferedWriter bufferedwriter;
-    private PrintWriter printwriter;
-    private int logslimit;
+public class ConsoleFilterModule extends AbstractModule {
+    private final Pattern ANSI_PATTERN = Pattern.compile("\\u001B\\[[;\\d]*[ -/]*[@-~]");
+
+    private final CustomFilter filter = new CustomFilter();
+    private Path logPath;
+    private BufferedWriter writer;
+    private PrintWriter printWriter;
+
+    private int logsLimit;
     private boolean filtering;
-    private boolean savefiltered;
-    private boolean errorfiltering;
+    private boolean saveFiltered;
+    private boolean errorFiltering;
     private List<Pattern> patterns;
-    private final AbstractFilter filter = new AbstractFilter() {
-
-        public Result filter(LogEvent event) {
-            if (!ConsoleFilterModule.this.filtering || event.getLoggerName().equals("ErrorFilter") || event.getLoggerName().equals("LagFixer")) {
-                return Result.NEUTRAL;
-            }
-            String message = event.getMessage().getFormattedMessage();
-            if (ConsoleFilterModule.this.errorfiltering && event.getMessage().getThrowable() != null) {
-                LogManager.getLogger("ErrorFilter").error(message);
-                ConsoleFilterModule.this.write(message);
-                if (event.getMessage().getThrowable() != null) {
-                    event.getMessage().getThrowable().printStackTrace(ConsoleFilterModule.this.printwriter);
-                    ConsoleFilterModule.this.printwriter.flush();
-                }
-                return Result.DENY;
-            }
-            for (Pattern pattern : ConsoleFilterModule.this.patterns) {
-                Matcher matcher = pattern.matcher(message);
-                if (!matcher.matches() && !matcher.lookingAt()) continue;
-                ConsoleFilterModule.this.write(message);
-                return Result.DENY;
-            }
-            return Result.NEUTRAL;
-        }
-    };
 
     public ConsoleFilterModule(LagFixer plugin, ModuleManager manager) {
         super(plugin, manager, Impact.VISUAL_ONLY, "ConsoleFilter",
                 new String[]{
                         "Filters console messages based on predefined rules.",
                         "Enhances clarity by selectively displaying essential messages.",
-                        "Reduces clutter and improves readability in multiplayer servers.",
-                        "Facilitates efficient server administration and enhances the user experience for both administrators and players."
-                }, "eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dXJlcy5taW5lY3JhZnQubmV0L3RleHR1cmUvOGViODFlZjg5MDIzNzk2NTBiYTc5ZjQ1NzIzZDZiOWM4ODgzODhhMDBmYzRlMTkyZjM0NTRmZTE5Mzg4MmVlMSJ9fX0=");
+                        "Reduces clutter and improves readability in multiplayer servers."
+                },
+                "eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dXJlcy5taW5lY3JhZnQubmV0L3RleHR1cmUvYWNjNzg5ZjIzMDc5NGY5MGUzM2M0ZjlhZDAwNjk0YmMyYTJmZjVlOGI5YjM3NWRjMzUzMjQwMWIyODFmM2U1OCJ9fX0=");
     }
 
-    public void clearLogs(File directory, String extension) {
-        if (this.logslimit < 1) {
-            return;
+    private void clearLogs(Path directory) {
+        if (logsLimit < 1 || !Files.exists(directory)) return;
+
+        try (Stream<Path> files = Files.list(directory)) {
+            files.filter(p -> p.toString().endsWith(".log.gz"))
+                    .sorted(Comparator.comparingLong((Path p) -> {
+                        try {return Files.getLastModifiedTime(p).toMillis();} catch (IOException e) {return 0L;}
+                    }).reversed())
+                    .skip(logsLimit)
+                    .forEach(path -> {
+                        try {Files.deleteIfExists(path);} catch (IOException ignored) {}
+                    });
+        } catch (IOException e) {
+            getPlugin().printError(e);
         }
-        Arrays.stream(directory.listFiles()).filter(f -> f.getName().endsWith(extension)).sorted((f1, f2) -> Long.compare(f2.lastModified(), f1.lastModified())).skip(this.logslimit).forEach(File::deleteOnExit);
     }
 
-    public void write(String text) {
+    public synchronized void write(String text) {
         try {
-            this.bufferedwriter.write(text);
-            this.bufferedwriter.newLine();
-            this.bufferedwriter.flush();
-        } catch (Exception ex) {
-            this.getPlugin().printError(ex);
+            writer.write(text);
+            writer.newLine();
+            writer.flush();
+        } catch (IOException ex) {
+            getPlugin().printError(ex);
         }
     }
 
     @Override
     public void load() throws IOException {
-        this.logs = new File(this.getPlugin().getDataFolder() + "/logs", "filtered_logs.txt");
-        this.logs.getParentFile().mkdirs();
-        this.logs.createNewFile();
-        Files.write(this.logs.toPath(), Collections.emptyList(), Charset.defaultCharset());
-        this.filewriter = new FileWriter(this.logs, true);
-        this.bufferedwriter = new BufferedWriter(this.filewriter);
-        this.printwriter = new PrintWriter(this.bufferedwriter);
-        File bukkitlogs = new File("logs");
-        this.clearLogs(bukkitlogs, ".gz");
+        Path folder = getPlugin().getDataFolder().toPath().resolve("logs");
+        Files.createDirectories(folder);
+        this.logPath = folder.resolve("filtered_logs.txt");
+
+        if (!Files.exists(logPath)) {
+            Files.createFile(logPath);
+        }
+
+        this.writer = Files.newBufferedWriter(logPath, StandardCharsets.UTF_8, StandardOpenOption.APPEND);
+        this.printWriter = new PrintWriter(writer);
+
+        clearLogs(Paths.get("logs"));
+
         Logger logger = (Logger) LogManager.getRootLogger();
-        if (!Iterators.any(logger.getFilters(), f -> f.hashCode() == this.filter.hashCode())) {
+
+        Iterator<Filter> it = logger.getFilters();
+        boolean initialized = false;
+        while (it.hasNext()) {
+            Filter filter = it.next();
+            if (filter instanceof CustomFilter) {
+                initialized = true;
+            }
+        }
+
+        if (!initialized) {
             logger.addFilter(this.filter);
         }
     }
 
     @Override
     public boolean loadConfig() {
-        this.logslimit = this.getSection().getInt("logs_limit");
-        this.filtering = this.getSection().getBoolean("filter.enabled");
-        this.savefiltered = this.getSection().getBoolean("filter.save_filtered");
-        this.errorfiltering = this.getSection().getBoolean("filter.error_filtering");
-        this.patterns = this.getSection().getStringList("filter.patterns").stream().map(Pattern::compile).collect(Collectors.toList());
+        this.logsLimit = getSection().getInt("logs_limit");
+        this.filtering = getSection().getBoolean("filter.enabled");
+        this.saveFiltered = getSection().getBoolean("filter.save_filtered");
+        this.errorFiltering = getSection().getBoolean("filter.error_filtering");
+        this.patterns = getSection().getStringList("filter.patterns").stream()
+                .map(Pattern::compile)
+                .toList();
         return true;
     }
 
     @Override
     public void disable() throws IOException {
         this.filtering = false;
-        LoggerContext loggerContext = (LoggerContext) LogManager.getContext(false);
-        LoggerConfig rootLogger = loggerContext.getConfiguration().getRootLogger();
-        Filter filter = rootLogger.getFilter();
-        if (filter != null) {
-            rootLogger.removeFilter(filter);
-            loggerContext.updateLoggers();
+
+        if (writer != null) {
+            writer.close();
+            printWriter.close();
         }
-        File directory = new File(this.getPlugin().getDataFolder() + "/logs");
-        this.bufferedwriter.close();
-        this.filewriter.close();
-        this.printwriter.close();
-        if (this.savefiltered) {
-            String name = new SimpleDateFormat("yyyy-MM-dd").format(new Date());
-            long number = Arrays.stream(Objects.requireNonNull(directory.listFiles())).filter(file -> file.getName().startsWith(name)).count();
-            ZipUtils.zipFile(this.logs, new File(directory, name + " [" + number + "].zip"));
-            this.clearLogs(directory, ".zip");
+
+        if (saveFiltered) {
+            Path folder = getPlugin().getDataFolder().toPath().resolve("logs");
+            String date = new SimpleDateFormat("yyyy-MM-dd").format(new Date());
+
+            long count;
+            try (Stream<Path> files = Files.list(folder)) {
+                count = files.filter(f -> f.getFileName().toString().startsWith(date)).count();
+            }
+
+            Path archivePath = folder.resolve(date + " [" + count + "].log.gz");
+            try (InputStream fis = Files.newInputStream(this.logPath);
+                 GZIPInputStream gis = new GZIPInputStream(fis);
+                 OutputStream os = Files.newOutputStream(archivePath)
+            ) {
+                gis.transferTo(os);
+            }
+
+            clearLogs(folder);
+        }
+    }
+
+    private class CustomFilter extends AbstractFilter {
+        @Override
+        public Filter.Result filter(LogEvent event) {
+            if (!filtering || event.getLoggerName().equals("ErrorFilter") || event.getLoggerName().equals("LagFixer")) {
+                return Filter.Result.NEUTRAL;
+            }
+
+            String rawMsg = event.getMessage().getFormattedMessage();
+            String cleanMsg = ANSI_PATTERN.matcher(rawMsg).replaceAll("");
+
+            if (errorFiltering && event.getMessage().getThrowable() != null) {
+                LogManager.getLogger("ErrorFilter").error(cleanMsg);
+                write(cleanMsg);
+                event.getMessage().getThrowable().printStackTrace(printWriter);
+                printWriter.flush();
+                return Filter.Result.DENY;
+            }
+
+            for (Pattern pat : patterns) {
+                if (pat.matcher(cleanMsg).find()) {
+                    write(cleanMsg);
+                    return Filter.Result.DENY;
+                }
+            }
+            return Filter.Result.NEUTRAL;
         }
     }
 }
-
